# open-ahrefs-scrapy

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg
site_checker/: items.py  middlewares.py  pipelines.py  settings.py
site_checker/spiders/: crawler.py
tests/: conftest.py
tests/integration/: test_site_checker.py
