[project]
name = "open-ahrefs-scrapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.14.1",
    "scrapy-redis>=0.9.1",
    "scrapy-redis-bloomfilter>=0.8.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "redis>=7.1.0",
]
